Base de datos ingresada

--- a/shop/Shop.Web/appsettings.json
+++ b/shop/Shop.Web/appsettings.json
@@ -5,8 +5,8 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
+    "ConnectionStrings": {
 
-    "DefaultConnection": "Server=LAPTOP-2FL7FOSK,Database=Shop,Trusted_Connection=True;MultipleActiveResultSets=true"
-  }
+        "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=Shop;Trusted_Connection=True;MultipleActiveResultSets=true"
+    }
   }
