--- a/shop/Shop.Web/appsettings.json
+++ b/shop/Shop.Web/appsettings.json
@@ -7,6 +7,6 @@
   "AllowedHosts": "*",
     "ConnectionStrings": {
 
-        "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=Shop;Trusted_Connection=True;MultipleActiveResultSets=true"
+        "DefaultConnection": "Server=ERICKO\\SQLEXPRESS;Database=Shop;Trusted_Connection=True;MultipleActiveResultSets=true"
     }
   }
